feat(analytics): add proper analytics to the site via self-hosted plausible

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"></script>
   <link href="/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl">
+  <script defer data-domain="tenta.davebay.net" src="https://analytics.tenta.davebay.net/js/plausible.js"></script>
+
 </head>
 
 <body>
